# lidar_c_mfot

./: README.md
code/src/algorithm/routing/lidar/: CMakeLists.txt
code/src/algorithm/routing/lidar/include/: lidar_astar.h  lidar_mfot.h  lidar_router.h
code/src/algorithm/routing/lidar/src/: lidar_astar.cpp  lidar_mfot.cpp
docs/: ALGORITHM_CHANGES_AND_INNOVATIONS.md  CURRENT_RESULTS.md  FILE_MANIFEST.md
results/: README.md  rollback_backup_current_diff_20260706_014224.patch  rollback_backup_current_status_20260706_014224.txt  rollback_diff_before_full_mfot.patch  rollback_status_before_full_mfot.txt
results/mfot_only_control_fullcase_20260706_115037/: clements_16x16_cpp.gds  clements_16x16_cpp.stdout.txt  clements_8x8_cpp.gds  clements_8x8_cpp.stdout.txt  converted_lidar.render_clean.layout.yml  mfot_only_control_fullcase_20260706_115037.csv  mfot_only_control_fullcase_20260706_115037.json  mrr_weight_bank_16x16_cpp.gds  mrr_weight_bank_16x16_cpp.stderr.txt  mrr_weight_bank_16x16_cpp.stdout.txt  mrr_weight_bank_4x4_cpp.gds  mrr_weight_bank_4x4_cpp.stderr.txt  mrr_weight_bank_4x4_cpp.stdout.txt  mrr_weight_bank_8x8_cpp.gds  mrr_weight_bank_8x8_cpp.stderr.txt  mrr_weight_bank_8x8_cpp.stdout.txt  multiportmmi_16x16_cpp.gds  multiportmmi_16x16_cpp.stdout.txt  multiportmmi_32x32_cpp.gds  multiportmmi_32x32_cpp.stdout.txt  multiportmmi_8x8_cpp.gds  multiportmmi_8x8_cpp.stdout.txt  toy_example_gp_cpp.stdout.txt
results/protected_fullcase_rerun_20260705_before_full_mfot/: clements_16x16_cpp.gds  clements_16x16_cpp.stdout.txt  clements_8x8_cpp.gds  (+21 more)
(+137 files in other folders)
